tests/paczka2/big_fuzzy/40887409.err
Error in line 3: NOU A441 34,3
Error in line 4: NOU S978 51,5
Error in line 1: OKkzIJhMg A853 72,8
Error in line 11: OKkzIJhMg A255 91,8
Error in line 10: Ot3TOtJNR9H S978 89,3
Error in line 21: Ot3TOtJNR9H A853 8,5
Error in line 46: pu2U5MwCg9 A441 77,1
Error in line 52: S978 A441 67,4
Error in line 48: pu2U5MwCg9 A853 61,0
Error in line 36: mcx A441 135,1
Error in line 56: Fbvj A441 79,5
Error in line 71: OKkzIJhMg A441 76,8
Error in line 84: NOU A441 50,0
Error in line 95: Fbvj A441 69,9
Error in line 102: S978 A441 8,10
Error in line 107: Fbvj A255 71,0
Error in line 101: S978 A853 19,1
Error in line 104: mcx S978 38,4
Error in line 116: mcx A255 276,38
Error in line 115: mcx A255 61,1
Error in line 123: Ot3TOtJNR9H A441 9,2
Error in line 127: OKkzIJhMg S978 37,5
Error in line 122: mcx A853 54,0
Error in line 112: S978 A441 51,8
Error in line 146: S978 A2ZZ 3Z3,1
Error in line 140: Fbvj S978 40,0
Error in line 165: S978 A255 12,6
Error in line 171: Ot3TOtJNR9H S978 42,5
Error in line 164: OKkzIJhMg A255 99,2
Error in line 182: S978 A853 60,9
Error in line 186: Fbvj A441 99,5
Error in line 189: S978 S978 18,5
Error in line 194: S978 A853 81,3
Error in line 201: S978 S978 38,8
Error in line 202: S978 A853 14,5
Error in line 206: NOU S978 54,0
Error in line 210: S978 S978 15,4
Error in line 213: S978 A441 34,2
Error in line 196: Fbvj A853 128,1
Error in line 227: mcx A255 187,0
Error in line 230: pu2U5MwCg9 A853 17,0
Error in line 235: S978 A853 -1,4
Error in line 232: Fbvj A853 66,2
Error in line 237: Fbvj A441 97,4
Error in line 215: S978 A853 13,8
Error in line 240: Fbvj A255 3,8
Error in line 243: Fbvj A853 32,2
